--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@ui/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky install"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.0.0",
@@ -28,6 +30,10 @@
     "@angular/cli": "~18.0.0",
     "@angular/compiler-cli": "~18.0.0",
     "@angular/language-service": "~18.0.0",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/config-nx-scopes": "^19.3.1",
+    "@commitlint/cz-commitlint": "^19.2.0",
     "@nx/eslint": "19.3.1",
     "@nx/eslint-plugin": "19.3.1",
     "@nx/jest": "19.3.1",
@@ -42,11 +48,14 @@
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "@typescript-eslint/utils": "^8.0.0-alpha.28",
+    "commitizen": "^4.3.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
+    "lint-staged": "^15.2.7",
     "nx": "19.3.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
