--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "commitizen": "^4.3.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "husky": "^8.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
