--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "@typescript-eslint/utils": "^8.0.0-alpha.28",
+    "autoprefixer": "^10.4.0",
     "commitizen": "^4.3.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
@@ -59,7 +60,9 @@
     "jest-preset-angular": "~14.1.0",
     "lint-staged": "^15.2.7",
     "nx": "19.3.1",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2"
