feat(feature-shell-main): initial commit

--- a/nx.json
+++ b/nx.json
@@ -49,6 +49,13 @@
       "linter": "eslint",
       "style": "less",
       "unitTestRunner": "jest"
+    },
+    "@nx/angular:library": {
+      "linter": "eslint",
+      "unitTestRunner": "jest"
+    },
+    "@nx/angular:component": {
+      "style": "less"
     }
   }
 }
