--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@ui/feature/shell/dashboard": [
+        "libs/feature/shell/dashboard/src/index.ts"
+      ],
       "@ui/feature/shell/layout": ["libs/feature/shell/layout/src/index.ts"],
       "@ui/feature/shell/main": ["libs/feature/shell/main/src/index.ts"]
     }
