--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,9 @@
       "@ui/feature/shell/dashboard": [
         "libs/feature/shell/dashboard/src/index.ts"
       ],
+      "@ui/feature/shell/health-check": [
+        "libs/feature/shell/health-check/src/index.ts"
+      ],
       "@ui/feature/shell/layout": ["libs/feature/shell/layout/src/index.ts"],
       "@ui/feature/shell/main": ["libs/feature/shell/main/src/index.ts"]
     }
