--- a/libs/shell/feature/main/project.json
+++ b/libs/shell/feature/main/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "feature-shell-layout",
+  "name": "shell-feature-main",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/feature/shell/layout/src",
+  "sourceRoot": "libs/shell/feature/main/src",
   "prefix": "lib",
   "projectType": "library",
   "tags": ["type:feature"],
@@ -10,7 +10,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/feature/shell/layout/jest.config.ts"
+        "jestConfig": "libs/shell/feature/main/jest.config.ts"
       }
     },
     "lint": {
