--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
       "@ui/auth/data-access": ["libs/auth/data-access/src/index.ts"],
       "@ui/auth/feature/login": ["libs/auth/feature/login/src/index.ts"],
       "@ui/auth/feature/main": ["libs/auth/feature/main/src/index.ts"],
+      "@ui/auth/ui": ["libs/auth/ui/src/index.ts"],
       "@ui/shared/data-access": ["libs/shared/data-access/src/index.ts"],
       "@ui/shared/ui": ["libs/shared/ui/src/index.ts"],
       "@ui/shared/util": ["libs/shared/util/src/index.ts"],
