--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -70,7 +70,8 @@
                 "onlyDependOnLibsWithTags": [
                   "type:feature",
                   "type:ui",
-                  "type:util"
+                  "type:util",
+                  "type:data-access"
                 ]
               },
               {
@@ -83,6 +84,13 @@
               {
                 "sourceTag": "type:util",
                 "onlyDependOnLibsWithTags": [
+                  "type:util"
+                ]
+              },
+              {
+                "sourceTag": "type:data-access",
+                "onlyDependOnLibsWithTags": [
+                  "type:data-access",
                   "type:util"
                 ]
               }
