--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/platform-browser": "~18.0.0",
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
+    "@fusionauth/typescript-client": "^1.51.0",
     "@nx/angular": "19.3.1",
     "ng-zorro-antd": "^18.0.0",
     "rxjs": "~7.8.0",
